--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Strava.node.js - Segment Node",
+  "name": "Strava.node.js",
   "version": "1.0.0",
   "description": "Strava Segment Analytics - Powered by Node.js",
   "keywords": [
